--- a/IGI/LR5/toyfactory_app/templates/accounts/login_client.html
+++ b/IGI/LR5/toyfactory_app/templates/accounts/login_client.html
@@ -19,4 +19,9 @@
         <a href="{% url 'register_client' %}">Зарегистрироваться</a>
         <a href="{% url 'login_employee' %}">Войти как сотрудник</a>
     </div>
+    {% if error %}
+        <p>
+            {{ error }}
+        </p>
+    {% endif %}
 {% endblock %}
