--- a/IGI/LR5/toyfactory_app/templates/base.html
+++ b/IGI/LR5/toyfactory_app/templates/base.html
@@ -8,7 +8,7 @@
             <li><a href="{% url 'index' %}">Домашняя страница</a></li>
             <li><a href="{% url 'toys' %}">Игрушки</a></li>
             <li><a href="{% url 'promocodes' %}">Промокоды</a></li>
-            <li><a href="{% url 'news' %}">Новости</a></li>
+            <li><a href="{% url 'news_list' %}">Новости</a></li>
             <li><a href="{% url 'feedbacks' %}">Отзывы</a></li>
             <li><a href="{% url 'termines' %}">Словарь</a></li>
             <li><a href="{% url 'vacations' %}">Вакансии</a></li>
@@ -16,7 +16,7 @@
             <li><a href="{% url 'about' %}">О компании</a></li>
             {% if user.is_authenticated %} 
                 <li><a href="{% url 'profile' user.pk %}">Профиль</a></li>
-                <li><a href="{% url 'logout' %}">Выйти</a></li>
+                <l  i><a href="{% url 'logout' %}">Выйти</a></li>
             {% else %}
                 <li><a href="{% url 'login_client' %}">Войти</a></li>
             {% endif %}
