--- a/IGI/LR5/toyfactory_app/templates/accounts/profile.html
+++ b/IGI/LR5/toyfactory_app/templates/accounts/profile.html
@@ -31,7 +31,10 @@
         День рождения: {{user.birthday}}
     </p>
     <p>Фото:</p>
-    <img src="{{ user.image.url }}">
+    <img src="{{ user.image.url }}"
+         width="400"
+         height="300"
+         alt="Фото сотрудника">
     <a href="{% url 'update_profile' user.pk %}">Редактировать профиль</a>
     <a href="{% url 'logout'}">Выйти</a>
 {% endblock %}
