--- a/IGI/LR5/toyfactory_app/templates/base.html
+++ b/IGI/LR5/toyfactory_app/templates/base.html
@@ -6,7 +6,7 @@
     <body>
         <div id="navigation">
             <li><a href="{% url 'index' %}">Домашняя страница</a></li>
-            <li><a href="{% url 'toys' %}">Игрушки</a></li>
+            <li><a href="{% url 'toys_list' %}">Игрушки</a></li>
             <li><a href="{% url 'promocodes' %}">Промокоды</a></li>
             <li><a href="{% url 'news_list' %}">Новости</a></li>
             <li><a href="{% url 'feedbacks' %}">Отзывы</a></li>
