--- a/IGI/LR5/toyfactory_app/templates/toy/detail.html
+++ b/IGI/LR5/toyfactory_app/templates/toy/detail.html
@@ -6,7 +6,12 @@
     <img src="{{ toy.image.url }}"
          width="400"
          height="300">
-    {% if toy.produced %} <p>В продаже.</p> <a href="">Купить</a>
+    {% if toy.produced %} <p>В продаже.</p>
+        {% if user.is_authenticated and user.role == required_role %} 
+            <form action="{{ toy.get_absolute_url }}" target="_blank">
+                <button>Купить</button>
+            </form>
+        {% endif %}
     {% else %} <p>Не в продаже</p>
     {% endif %}
 {% endblock %}
