--- a/IGI/LR5/toyfactory_app/templates/promocodes.html
+++ b/IGI/LR5/toyfactory_app/templates/promocodes.html
@@ -1,4 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Промокоды</h1>
+    <h3>Виды</h3>
+    <ul>
+        <li {% if not pr_type %}class="selected"{% endif %}>
+            <a href="{% url 'promocodes_list' %}">All</a>
+        </li>
+        {% for p in pr_types %}
+            <li {% if pr_type.slug == p.slug %} class="selected"{% endif %}>
+                <a href="{{ p.get_absolute_url }}">{{ p.name }}</a>
+            </li>
+        {% endfor %}
+    </ul>
+    <h2>{% if pr_type %}{{ pr_type.name }}{% else %}Все промокоды{% endif %}</h2>
+        {% for promocode in promocodes %}
+            <div class="item">
+                <p>{{promocode.name}}</p>
+                <p>{{promocode.discount}}</p>
+            </div>
+        {% endfor %}
+        {% include "pagination.html" with page=promocodes %}
 {% endblock %}
