--- a/IGI/LR5/toyfactory_app/templates/clients/my_clients.html
+++ b/IGI/LR5/toyfactory_app/templates/clients/my_clients.html
@@ -8,6 +8,7 @@
             <p>Имя: {{client.user.first_name}}</p>
             <p>Почта: {{client.user.email}}</p>
             <p>Номер телефона: {{client.user.phone}}</p>
+            <a href="{% url 'client_orders_list' client.user.pk %}">Список заказов</a>
         </li>
         {% endfor %}
     </ul>
