almost finish analize

--- a/IGI/LR5/toyfactory_app/templates/statistics/index.html
+++ b/IGI/LR5/toyfactory_app/templates/statistics/index.html
@@ -3,5 +3,5 @@
     <a href="{% url 'statistics_price_list' %}">Прайс-лист</a>
     <a href="{% url 'statistics_clients' %}">Информация о клиентах</a>
     <a href="{% url 'statistics_toys' %}">Информация об игрушках</a>
-    <a href="">Отчет о прибыли</a>
+    <a href="{% url 'statistics_profit' %}">Отчет о прибыли</a>
 {% endblock %} 
