--- a/IGI/LR5/toyfactory_app/templates/statistics/index.html
+++ b/IGI/LR5/toyfactory_app/templates/statistics/index.html
@@ -4,4 +4,5 @@
     <a href="{% url 'statistics_clients' %}">Информация о клиентах</a>
     <a href="{% url 'statistics_toys' %}">Информация об игрушках</a>
     <a href="{% url 'statistics_profit' %}">Отчет о прибыли</a>
+    <a href="{% url 'statistics_month' %}">Ежемесячный объем продаж</a>
 {% endblock %} 
