--- a/IGI/LR5/toyfactory_app/templates/toyfactory_app/employee_detail.html
+++ b/IGI/LR5/toyfactory_app/templates/toyfactory_app/employee_detail.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <p>Name: {{employee.name}}</p>
-    <p>{{employee.image}}</p>
-    <img src={{employee.image}}>
-    <p>Phone: {{employee.phone}}</p>
-    <p>Email: {{employee.email}}</p>
-    <p>Birthday: {{employee.birthday}}</p>
+    <p>Сотрудник {{employee.first_name}} {{employee.last_detail}}</p>
+    <img src="{{ employee.image.url }}"
+        width="500"
+        height="400">
+    <p>Телефон: {{ employee.phone }}</p>
+    <p>Почта: {{ employee.email }}</p>
 {% endblock %}
