--- a/IGI/LR5/toyfactory_app/templates/news/list.html
+++ b/IGI/LR5/toyfactory_app/templates/news/list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    {% if news_list %}
     <h1>Новости</h1>
     {% for news in news_list %}
         <div class="item">
@@ -14,4 +15,7 @@
             </form>
         </div>
     {% endfor %}
+    {% else %}
+        <p>На данный момент новости отсутствуют.</p>
+    {% endif %}
 {% endblock %}
