--- a/IGI/LR5/toyfactory_app/templates/accounts/register_client.html
+++ b/IGI/LR5/toyfactory_app/templates/accounts/register_client.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <h1>Регистрация клиента</h1>
     <form action="" method="POST">
         {% csrf_token %}
         <table>
