IGI final commit

--- a/IGI/LR5/toyfactory_app/templates/base.html
+++ b/IGI/LR5/toyfactory_app/templates/base.html
@@ -4,6 +4,7 @@
         {% block title %}<title>Toy Factory</title>{% endblock %}
     </head>
     <body>
+        <p>{% now "F j Y"%}</p>
         <div id="navigation">
             <li><a href="{% url 'index' %}">Домашняя страница</a></li>
             <li><a href="{% url 'toys_list' %}">Игрушки</a></li>
